# Race-Telemetry-Package

./: .gitignore  README.md  README_Backup.md  README_PyPI.md  build.bat  pyproject.toml
Supporting Docs/: Data Output from F1 2021 Link.txt  Data Output from F1 22 v16.docx
Supporting_Docs/: forza debug.txt
main/: main.py
main/data_structures/: ACC_struct.py  ACE_struct.py  AC_SM_struct.py  AC_UDP_struct.py  AC_struct.py  BNG_struct.py  ETS2_struct.py  F1_2016_struct.py  F1_2017_struct.py  F1_2018_struct.py  F1_2019_struct.py  F1_2020_struct.py  F1_2021_struct.py  F1_2022_struct.py  F1_2023_struct.py  F1_2025_struct.py  F1_2026_struct.py  FH4_struct.py  FH5_struct.py  FH6_struct.py  FM7_struct.py  FM8_struct.py  GT7_struct.py  PC2_struct.py  PC_UDP_struct.py  beamng_drive.py  f1_2024_struct.py
main/support/: digestion.py  server.py
main/test_programs/: BNG_multiThread.py  BNG_singleThread.py  F1_2024_multiThread.py  F1_2024_singleThread.py  FH5_multiThread.py  FH5_singleThread.py  FM8_multiThread.py  FM8_singleThread.py  GT7_singleThread.py  PC2_multiThread.py  PC2_singleThread.py
src/RaceTelemetry/: __init__.py  digestion.py  main.py
tests/: playground.py  quick_test.py  test_PyPI.py  test_digestion.py  test_main.py  test_resources.py
tests/Assetto Corsa/: AC_SM_singleThread.py
tests/BeamNG Drive/: BNG_singleThread.py
tests/Dirt 4/: Dirt_4_singleThread.py
tests/Dirt Rally/: Dirt_Rally_multiThread.py
tests/F1 2016/: F1_2016_multiThread.py
tests/F1 2017/: F1_2017_multiThread.py
tests/F1 2022/: F1_2022_multiThread.py
(+112 files in other folders)
