[tool.black]
line-length = 150
include = '\.pyi?$'
force-exclude = '''.*data_structures.*'''


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "RaceTelemetry" # this is the PyPI name (can differ from import name)
version = "v4.6.7-1"    # [major server] . [minor server] . [data structure version] - [package version]
authors = [{ name = "bobbythehuman" }]
description = "A telemetry package that can extract UDP and Shared Memory data from most racing games."
readme = "README_PyPI.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LGPL-2.1"
license-files = ["LICENSE"]


[project.urls]
Homepage = "https://github.com/bobbythehuman/Race-Telemetry-Package"
Issues = "https://github.com/bobbythehuman/Race-Telemetry-Package/issues"